--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
   
 <div class="container text-center">    
-  <h3>The Team/h3><br>
+  <h3>The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
@@ -88,8 +88,7 @@
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       <p>Jonathan C</p>
     </div>
-    
-</div><br>
+  </div><br>
 
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
