--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="item active">
         <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
         <div class="carousel-caption">
-          <h3>Sell $</h3>
+          <h3>FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS.</h3>
           <p>Money Money.</p>
         </div>      
       </div>
@@ -56,7 +56,7 @@
       <div class="item">
         <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
         <div class="carousel-caption">
-          <h3>More Sell $</h3>
+          <h3>“Always down to spill the tea”</h3>
           <p>Lorem ipsum...</p>
         </div>      
       </div>
