--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="item">
-        <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+        <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" alt="Image">
         <div class="carousel-caption">
           <h3>“Always down to spill the tea”</h3>
           <p>Lorem ipsum...</p>
@@ -77,15 +77,15 @@
   <h3>The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Sammi C</p>
     </div>
     <div class="col-sm-4"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Donna L</p>    
     </div>
     <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Jonathan C</p>
     </div>
   </div><br>
