--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+        <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" alt="Friends Boba">
         <div class="carousel-caption">
           <h3>FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS.</h3>
           <p>Money Money.</p>
@@ -55,10 +55,9 @@
       </div>
 
       <div class="item">
-        <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" alt="Image">
+        <img src="https://s-media-cache-ak0.pinimg.com/736x/bd/b7/0d/bdb70dbe0013a3e4a2bd57461507464c.jpg" alt="Girls Boba">
         <div class="carousel-caption">
           <h3>“Always down to spill the tea”</h3>
-          <p>Lorem ipsum...</p>
         </div>      
       </div>
     </div>
