--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
-<!--this is the home page --> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>frentea</title>
+  
+  <title> FrenTea </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+  <style>
+  body {
+      font: 20px Raleway, sans-serif;
+      line-height: 1.8;
+      color: #f5f6f7;
+  }
+  p {font-size: 16px;}
+  .margin {margin-bottom: 45px;}
+  .bg-1 { 
+      background-color: #1abc9c; /* Green */
+      color: #ffffff;
+  }
+  .bg-2 { 
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+  }
+  .bg-3 { 
+      background-color: #ffffff; /* White */
+      color: #555555;
+  }
+  .bg-4 { 
+      background-color: #2f2f2f; /* Black Gray */
+      color: #fff;
+  }
+  .container-fluid {
+      padding-top: 70px;
+      padding-bottom: 70px;
+  }
+  .navbar {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      border: 0;
+      border-radius: 0;
+      margin-bottom: 0;
+      font-size: 12px;
+      letter-spacing: 5px;
+  }
+  .navbar-nav  li a:hover {
+      color: #1abc9c !important;
+  }
+  </style>
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+<!-- Navbar -->
+<nav class="navbar navbar-default">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -24,73 +65,53 @@
       <a class="navbar-brand" href="#">Frentea</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href= "#">Find Friends</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="login.html">LOG IN</a></li>
+        <li><a href="#">FIND FRIENDS</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" alt="Friends Boba">
-        <div class="carousel-caption">
-          <h3>FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS.</h3>
-        </div>      
-      </div>
-
-      <div class="item">
-        <img src="https://s-media-cache-ak0.pinimg.com/736x/bd/b7/0d/bdb70dbe0013a3e4a2bd57461507464c.jpg" alt="Girls Boba">
-        <div class="carousel-caption">
-          <h3>“Always down to spill the tea”</h3>
-        </div>      
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">"FIND A PROM DATE. FIND A FRIEND. FIND BOBA FRIENDS. FRINDER"</h3>
+  <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <h3>“Always down to spill the tea”</h3>
 </div>
-  
-<div class="container text-center">    
-  <h3>The Team</h3><br>
+
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">What Am I?</h3>
+  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+  <a href="#" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-search"></span> Search
+  </a>
+</div>
+
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Sammi C</p>
+       <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Donna L</p>    
+      <p>Donna L</p>
+      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-4">
-      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-4"> 
       <p>Jonathan C</p>
+      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
-  </div><br>
+  </div>
+</div>
 
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
+<!-- Footer -->
+<footer class="container-fluid bg-4 text-center">
+  <p>Donna likes oolong milktea.</p> 
 </footer>
 
 </body>
