--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/food-drinks-color-1/128/bubble-tea-2-128.png">
   <title> FrenTea </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
