--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">"FIND A PROM DATE. FIND A FRIEND. FIND BOBA FRIENDS. FRINDER"</h3>
+  <h3 class="margin">"FIND BOBA RECOMMENDATIONS. FIND FRIENDS. FIND BOBA FRIENDS. FRINDER"</h3>
   <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>“Always down to spill the tea”</h3>
 </div>
