--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">ABOUT</a></li>
-        <li><a href="login.html">LOG IN</a></li>
-        <li><a href="#">FIND FRIENDS</a></li>
+        <li><a href="#">LOG IN</a></li>
+        <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
     </div>
   </div>
