--- a/findfriends.html
+++ b/findfriends.html
@@ -99,12 +99,12 @@
        <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Donna L</p>
-      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Semada Si</p>
+      <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Jonathan C</p>
-      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Samanthuh See</p>
+      <img src="https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
