--- a/findfriends.html
+++ b/findfriends.html
@@ -96,7 +96,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Sammi C</p>
-       <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="https://i.ytimg.com/vi/6_VrqjlZ9ZU/maxresdefault.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Semada Si</p>
