--- a/findfriends.html
+++ b/findfriends.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #cc99ff; /* Green */
+      background-color: #b3b3ff; /* light blue */
       color: #ffffff;
   }
   .bg-2 { 
