--- a/findfriends.html
+++ b/findfriends.html
@@ -68,7 +68,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">ABOUT</a></li>
         <li><a href="login.html">LOG IN</a></li>
-        <!--<li><a href="#"></a></li>-->
+        <li><a href="#"></a></li>
       </ul>
     </div>
   </div>
