--- a/findfriends.html
+++ b/findfriends.html
@@ -76,9 +76,21 @@
 
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">"This is different"</h3>
-  <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>“Always down to spill the tea”</h3>
+ <h3 class="margin">The Team</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <p>Sammi C</p>
+       <img src="https://i.ytimg.com/vi/6_VrqjlZ9ZU/maxresdefault.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p>Semada Si</p>
+      <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p>Samanthuh See</p>
+      <img src="https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+  </div>
 </div>
   
 <!-- Second Container -->
