--- a/findfriends.html
+++ b/findfriends.html
@@ -79,16 +79,16 @@
  <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Sammi C</p>
-       <img src="https://i.ytimg.com/vi/6_VrqjlZ9ZU/maxresdefault.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Friend 1</p>
+       <img src="https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0605/6123/rcorgi_boba_2_shop_preview.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Semada Si</p>
-      <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Friend 2</p>
+      <img src="https://rokjaychou.files.wordpress.com/2015/04/lets-be-boba-buddies-pokeadot.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Samanthuh See</p>
-      <img src="https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="https://cdn.dribbble.com/users/228053/screenshots/3086637/boba.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
