--- a/findfriends.html
+++ b/findfriends.html
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Friend 1</p>
-       <img src="https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0605/6123/rcorgi_boba_2_shop_preview.png" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://i67.tinypic.com/ofdd1w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Friend 2</p>
@@ -88,7 +88,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Samanthuh See</p>
-      <img src="https://cdn.dribbble.com/users/228053/screenshots/3086637/boba.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
