--- a/findfriends.html
+++ b/findfriends.html
@@ -108,7 +108,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Sammi C</p>
-       <img src="https://i.ytimg.com/vi/6_VrqjlZ9ZU/maxresdefault.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://i67.tinypic.com/ofdd1w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Semada Si</p>
@@ -116,7 +116,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Samanthuh See</p>
-      <img src="https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
