--- a/findfriends.html
+++ b/findfriends.html
@@ -92,7 +92,15 @@
     </div>
   </div>
 </div>
-
+  
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">What Am I?</h3>
+  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+  <a href="#" class="btn btn-default btn-lg">
+  </a>
+</div>
+  
  <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">The Team</h3><br>
