--- a/findfriends.html
+++ b/findfriends.html
@@ -98,6 +98,7 @@
   <h3 class="margin">What Am I?</h3>
   <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
   <a href="#" class="btn btn-default btn-lg">
+    <span class = "glyphicon glyphicon-search"></span> Find Friends
   </a>
 </div>
   
