--- a/findfriends.html
+++ b/findfriends.html
@@ -66,7 +66,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li><a href="login.html">LOG IN</a></li>
         <li><a href="#"></a></li>
       </ul>
