--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #1abc9c; /* Peach */
-      color: #ff9980;
+      background-color: #ff9980; /* Peach */
+      color: #ffffff;
   }
   .bg-2 { 
       background-color: #474e5d; /* Dark Blue */
