--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="#"></a></li>
         <li><a href="#">LOG IN</a></li>
         <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
@@ -83,7 +83,7 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
+  <h3 class="margin"><a href="#">The Team</a></h3>
   <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
   </div>
 
