--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">The Team</h3><br>
+  <h3 class="margin"><a href="about.html">The Team</a></h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p>Sammi C</p>
