--- a/about.html
+++ b/about.html
@@ -77,19 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h1 class="margin">About Frentea</h1>
-  <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>“Always down to spill the tea”</h3>
-</div>
-
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin">nope</h3>
-  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
-  </div>
-
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">The Team</h3><br>
+    <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p>Sammi C</p>
@@ -104,6 +92,18 @@
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
+</div>
+
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">nope</h3>
+  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+  </div>
+
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">More</h3><br>
+  
 </div>
 
 <!-- Footer -->
