--- a/about.html
+++ b/about.html
@@ -77,6 +77,12 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h1 class="margin">About Frentea</h1>
+   <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+</div>
+
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+   <h1 class="margin">About Frentea</h1>
     <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
@@ -92,12 +98,6 @@
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
-</div>
-
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin">nope</h3>
-  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
   </div>
 
 <!-- Third Container (Grid) -->
