--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   .margin {margin-bottom: 45px;}
   .bg-1 { 
       background-color: #1abc9c; /* Green */
-      color: #ffffff;
-      font-size: 250%;
+      color: #555555;
   }
   .bg-2 { 
       background-color: #474e5d; /* Dark Blue */
