--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       line-height: 1.8;
       color: #f5f6f7;
   }
-  p {font-size: 16px;}
+  p {font-size: 50px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
       background-color: #1abc9c; /* Green */
-      color: #555555;
+      color: #ffffff;
   }
   .bg-2 { 
       background-color: #474e5d; /* Dark Blue */
