--- a/about.html
+++ b/about.html
@@ -77,12 +77,11 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h1 class="margin">About Frentea</h1>
-   <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+   <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends.  </p>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-   <h1 class="margin">About Frentea</h1>
     <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
