--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       color: #ffffff;
   }
   .bg-2 { 
-    background-color: #ffffff; /* White */
+    background-color: #ffd6cc; /* White */
       color: #555555;
   }
   .bg-3 { 
