--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/food-drinks-color-1/128/bubble-tea-2-128.png">
-  <title> FrenTea </title>
+  <title> Frentea </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -76,7 +76,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
+  <h3 class="margin"><font size="20">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</font></h3>
   <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>“Always down to spill the tea”</h3>
 </div>
