--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="#">LOG IN</a></li>
+        <li><a href="#">MORE</a></li>
         <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
     </div>
