--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"></a></li>
-        <li><a href="#">LOG IN</a></li>
+        <li><a href="#">FIND TEA</a></li>
         <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
     </div>
