--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #ff9980; /* Peach */
+      background-color: #C68977; /* Peach */
       color: #ffffff;
   }
   .bg-2 { 
-    background-color: #ffd6cc; /* White */
+    background-color: #ffd6cc; /* pink */
       color: #555555;
   }
   .bg-3 { 
