--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #C68977; /* Peach */
+      background-color: #984d5e ; /* rasberry */
       color: #ffffff;
   }
   .bg-2 { 
