--- a/findfriends.html
+++ b/findfriends.html
@@ -67,7 +67,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="#">FIND TEA</a></li>
+        <li><a href="findtea.html">FIND TEA</a></li>
         <li><a href="#"></a></li>
       </ul>
     </div>
