--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #b36a7b ; /* rasberry */
+      background-color: #D9B3FF ; /* rasberry */
       color: #ffffff;
   }
   .bg-2 { 
@@ -67,7 +67,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"></a></li>
-        <li><a href="#">FIND TEA</a></li>
+        <li><a href="findtea.html">FIND TEA</a></li>
         <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
     </div>
