--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #b36a7b ; /* rasberry */
+      background-color: #d0576f ; /* rasberry */
       color: #ffffff;
   }
   .bg-2 { 
