--- a/findtea.html
+++ b/findtea.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #ffff99; /* yeller */
+      background-color: #A1F68C; /* yeller */
       color: #ffffff;
   }
   .bg-2 { 
