--- a/findtea.html
+++ b/findtea.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #A1F68C; /* yeller */
+      background-color: #A1F68C; /* green */
       color: #ffffff;
   }
   .bg-2 { 
@@ -62,7 +62,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Frentea</a>
+      <a class="navbar-brand" href="index.html">Frentea</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
