--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
   <style>
   body {
       font: 20px Raleway, sans-serif;
-      line-height: 1.8;
+  }      line-height: 1.8;
       color: #f5f6f7;
-  }
+
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
@@ -22,7 +22,7 @@
       color: #ffffff;
   }
   .bg-2 { 
-    background-color: #ffd6cc; /* pink */
+    background-color: #ffffff; /* pink */
       color: #555555;
   }
   .bg-3 { 
