--- a/about.html
+++ b/about.html
@@ -77,8 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h1 class="margin">About Frentea</h1>
-  <img scr= "
-https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
+  <img src= "https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
    <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends.  </p>
 </div>
 
