--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h1 class="margin">About Frentea</h1>
-  <img src= "http://68.media.tumblr.com/cf38b29c90f6a903d4ce6553b9b481d5/tumblr_nuhlrqZLTo1ube0zao3_400.png" style="width:100%" alt="Image">
+  <img src= "https://tribzap2it.files.wordpress.com/2016/07/we-bare-bears-cartton-network1.jpg" style="width:100%" alt="Image">
    <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends.  </p>
 </div>
 
