--- a/findfriends.html
+++ b/findfriends.html
@@ -84,7 +84,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Friend 2</p>
-      <img src="https://rokjaychou.files.wordpress.com/2015/04/lets-be-boba-buddies-pokeadot.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Samanthuh See</p>
