--- a/findfriends.html
+++ b/findfriends.html
@@ -77,20 +77,7 @@
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
  <h3 class="margin">The Team</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p>Friend 1</p>
-       <img src="http://i67.tinypic.com/ofdd1w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4"> 
-      <p>Friend 2</p>
-      <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4"> 
-      <p>Samanthuh See</p>
-      <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-  </div>
+   <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
 </div>
   
 <!-- Second Container -->
