--- a/about.html
+++ b/about.html
@@ -76,10 +76,19 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h1 class="margin">About Frentea</h1>
-  <img src= "https://tribzap2it.files.wordpress.com/2016/07/we-bare-bears-cartton-network1.jpg" style="width:100%" alt="Image">
-   <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends.  </p>
+ <h1 class="margin">About Frentea</h1>
+    <div class="row">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-4"> 
+        <img src= "https://tribzap2it.files.wordpress.com/2016/07/we-bare-bears-cartton-network1.jpg" style="width:100%" alt="Image">
+      </div>
+      <div class="col-sm-4">
+      </div>
+    </div>
+ <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends. </p>
 </div>
+
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
