--- a/about.html
+++ b/about.html
@@ -12,8 +12,9 @@
   <style>
   body {
       font: 20px Raleway, sans-serif;
-  }      line-height: 1.8;
+      line-height: 1.8;
       color: #f5f6f7;
+  }
 
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
