--- a/findfriends.html
+++ b/findfriends.html
@@ -76,7 +76,7 @@
 
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h3 class="margin">The Team</h3><br>
+ <h3 class="margin">Friend</h3><br>
    <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
 </div>
   
