--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
       </div>
     </div>
   <p> </p>
- <p>Hi friends! We're creating a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with FrenTea! We'll be sure to FILTER out all those fake tea friends. </p>
+ <p>Hi friends! We've created a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with Frentea! We'll be sure to FILTER out all those fake tea friends. </p>
 </div>
 
 
