--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Donna likes oolong milktea.</p> 
+  <p>Jonathan likes HK style milktea.</p> 
 </footer>
 
 </body>
