--- a/about.html
+++ b/about.html
@@ -100,14 +100,17 @@
     <div class="col-sm-4">
       <p>Sammi C</p>
        <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+        <p>Sammi is an avid crafter and fan of cartoon polar bears.</p>
     </div>
     <div class="col-sm-4"> 
       <p>Donna L</p>
       <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Donna is a sarcastic procrastinator and appreciates unicorns that resemble cows.</p>
     </div>
     <div class="col-sm-4"> 
       <p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Jonathan has hair.</p>
     </div>
   </div>
   </div>
