--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
     <div class="col-sm-4"> 
       <p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Jonathan has hair.</p>
+      <p>Jonathan does not have pink hair.</p>
     </div>
   </div>
   </div>
