--- a/about.html
+++ b/about.html
@@ -98,17 +98,17 @@
     <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Sammi C</p>
+      <h4>Web Design </h4><p>Sammi C</p>
        <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
         <p>Sammi is an avid crafter and fan of cartoon polar bears.</p>
     </div>
     <div class="col-sm-4"> 
-      <p>Donna L</p>
+      <h4>Backend </h4><p>Donna L</p>
       <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Donna is a sarcastic procrastinator and appreciates unicorns that resemble cows.</p>
     </div>
     <div class="col-sm-4"> 
-      <p>Jonathan C</p>
+      <h4>Social Media Manager </h4><p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Jonathan does not have pink hair.</p>
     </div>
