--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
       <p>Donna is a sarcastic procrastinator and appreciates unicorns that resemble cows.</p>
     </div>
     <div class="col-sm-4"> 
-      <h4>Social Media Manager </h4><p>Jonathan C</p>
+      <h4>Full Stack </h4><p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Jonathan does not have pink hair.</p>
     </div>
