--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
       <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Donna is a sarcastic procrastinator and appreciates unicorns that resemble cows.</p>
+      <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows.</p>
     </div>
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
