--- a/findtea.html
+++ b/findtea.html
@@ -116,7 +116,7 @@
   <p>Donna likes oolong milktea.</p> 
 </footer>
 
-<script>    
+<script   
 var locations = [
   ['Bondi Beach', -33.890542, 151.274856, 4],
   ['Coogee Beach', -33.923036, 151.259052, 5],
