--- a/findtea.html
+++ b/findtea.html
@@ -9,9 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-
   <style>
+    
   body {
       font: 20px Raleway, sans-serif;
       line-height: 1.8;
@@ -51,7 +50,7 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
- 
+  </style>
 </head>
 <body>
 
