--- a/findfriends.html
+++ b/findfriends.html
@@ -49,6 +49,15 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
+  
+  #wireframeThree {
+			visibility: hidden;
+			font-family: Montserrat, sans-serif;
+			color: #7B0099;
+
+	}
+  
+    
   </style>
 </head>
 <body>
@@ -77,7 +86,22 @@
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
  <h3 class="margin">Friend</h3><br>
-   <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
+  
+	<div id="wireframeThree">
+		<div id="wireframeThreeBar"><h1>!oohay</h1>
+			<form>
+			<input type="text" id="usersName" name="value" placeholder="What is yo name honey?" style="width:125%"/> <br> <br>
+			<input type="button" value="!oohay ME" id = "submitButton" class="btn btn-info btn-lg" onclick = "myFunction()"/>
+			</form>
+		</div>
+		<div id="wireframeThreeImage">
+			<img id="pics">
+			<h2 id="username"></h2>
+			<h3 id="funFactTag"></h3>
+		</div>
+	</div>
+
+  <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
 </div>
   
 <!-- Second Container -->
