--- a/findtea.html
+++ b/findtea.html
@@ -130,7 +130,7 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=myMap"></script>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
