--- a/findtea.html
+++ b/findtea.html
@@ -96,9 +96,8 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
-  </div>
+ <div id="googleMap" style="width:100%;height:400px;"></div>
+</div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
