--- a/findtea.html
+++ b/findtea.html
@@ -117,7 +117,7 @@
     </div>
   </div>
 </div>
-<div id="googleMap" style="width:100%;height:400px;"></div>
+<div id="map" style="width:100%;height:400px;"></div>
 
 <script>
 function myMap() {
