--- a/findtea.html
+++ b/findtea.html
@@ -117,16 +117,15 @@
     </div>
   </div>
 </div>
-<div id="map" style="width:100%;height:400px;"></div>
+<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script>
 function myMap() {
-  var myCenter = new google.maps.LatLng(51.508742,-0.120850);
-  var mapCanvas = document.getElementById("map");
-  var mapOptions = {center: myCenter, zoom: 5};
-  var map = new google.maps.Map(mapCanvas, mapOptions);
-  var marker = new google.maps.Marker({position:myCenter});
-  marker.setMap(map);
+var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
 </script>
 
