--- a/findtea.html
+++ b/findtea.html
@@ -84,19 +84,45 @@
 </div>
   
   
-<script> function GetValue()
-{
-    var myarray= new Array("item1","item2","item3");
-    var random = myarray[Math.floor(Math.random() * myarray.length)];
-    //alert(random);
-    document.getElementById("message").innerHTML=random;
-}</script>
+<script type="text/javascript">
+    var locations = [
+      ['Bondi Beach', -33.890542, 151.274856, 4],
+      ['Coogee Beach', -33.923036, 151.259052, 5],
+      ['Cronulla Beach', -34.028249, 151.157507, 3],
+      ['Manly Beach', -33.80010128657071, 151.28747820854187, 2],
+      ['Maroubra Beach', -33.950198, 151.259302, 1]
+    ];
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 10,
+      center: new google.maps.LatLng(-33.92, 151.25),
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
+  </script>
   
   
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
- <div id="googleMap" style="width:100%;height:400px;"></div>
+ <div id="map" style="width:100%;height:400px;"></div>
 </div>
 
 <!-- Third Container (Grid) -->
