added arrays (name + factz)

--- a/findfriends.html
+++ b/findfriends.html
@@ -112,6 +112,16 @@
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p>Sammi likes honey milktea.</p> 
+  <script> var names = ["Jonathan C.", "Donna L", "Sammi C.", "Vincent Y", "Kelly L", "Tiffany Yu :)", "Michael C", "Melissa C" 
+                        , "Clement Cheuk Wai Ng", "Nicolas H", "Leonard W.", "Klarizza", "Justin F", "Claudia T", "Tommy P"
+                        , "Mimi N.", "Bethany W", "Amanda Hall", "Galina I", "Herman P", "Alex F", "Matthew C"];
+           var funFact = ["working at Honeyberry", "having nine fingers", "smelling mostly everything", "having black hair"
+                          , "petting my cute dog", "having more testosterone than most men", "making memes"
+                          , "thinking Buster Posey is cool", "being a pesca-pescatarian", "not finishing textExcel", "FML"
+                          , "Jonathan Chai being a stinky house", "needing help with TextExcel (which also means Parsa needs help)"
+                          , "Jonathan not having pink hair", "liking trains", "liking to eat stir fried squash and deep fried tofu and getting Chicken Bakes from Costco [:"
+                          , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus"];
+  </script>
 </footer>
 
 </body>
