--- a/findtea.html
+++ b/findtea.html
@@ -90,7 +90,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
- <div id="map" style="width:100%;height:400px;"></div>
+ <div id="googleMap" style="width:100%;height:400px;"></div>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -111,22 +111,16 @@
     </div>
   </div>
 </div>
-<div id="map" style="width:100%;height:400px;"></div>
+<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script>
-  var user_lat,user_lng;
-  var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat:17, lng: 80},
-      zoom: 5
-    });
-    var marker = new google.maps.Marker({
-      position: {lat:17,lng:80},
-      map: map,
-      title: 'Hello World!'
-    }); 
-  }
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
 </script>
 
 
