--- a/findtea.html
+++ b/findtea.html
@@ -115,7 +115,7 @@
 <script>
 function myMap() {
 var mapProp= {
-    center:new google.maps.LatLng(37.6010, 122.3921),
+    center:new google.maps.LatLng(37.6010° N, 122.3921° W),
     zoom:5,
 };
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
