--- a/findtea.html
+++ b/findtea.html
@@ -112,16 +112,26 @@
   </div>
 </div>
 
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(37.59897, -122.401991),
-    zoom:15,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+ <script>
+
+function initMap() {
+  var myLatLng = {lat: -25.363, lng: 131.044};
+
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 4,
+    center: myLatLng
+  });
+
+  var marker = new google.maps.Marker({
+    position: myLatLng,
+    map: map,
+    title: 'Hello World!'
+  });
 }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=myMap"></script>
+  </script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=initMap">
+  </script>
 
 
 <!-- Footer -->
