--- a/findtea.html
+++ b/findtea.html
@@ -114,26 +114,42 @@
 
  <script>
 
-function initMap() {
-  var myLatLng = {lat: -25.363, lng: 131.044};
+var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+var labelIndex = 0;
 
+function initialize() {
+  var bangalore = { lat: 12.97, lng: 77.59 };
   var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 4,
-    center: myLatLng
+    zoom: 12,
+    center: bangalore
   });
 
+  // This event listener calls addMarker() when the map is clicked.
+  google.maps.event.addListener(map, 'click', function(event) {
+    addMarker(event.latLng, map);
+  });
+
+  // Add a marker at the center of the map.
+  addMarker(bangalore, map);
+}
+
+// Adds a marker to the map.
+function addMarker(location, map) {
+  // Add the marker at the clicked location, and add the next-available label
+  // from the array of alphabetical characters.
   var marker = new google.maps.Marker({
-    position: myLatLng,
-    map: map,
-    title: 'Hello World!'
+    position: location,
+    label: labels[labelIndex++ % labels.length],
+    map: map
   });
 }
-  </script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=initMap">
-  </script>
 
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44"></script>
+  
+  
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p>Donna likes oolong milktea.</p> 
