--- a/findtea.html
+++ b/findtea.html
@@ -90,7 +90,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
- <div id="googleMap" style="width:100%;height:400px;"></div>
+ <div id="map" style="width:100%;height:400px;"></div>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -114,37 +114,40 @@
 
  <script>
 
-var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-var labelIndex = 0;
-
 function initialize() {
-  var bangalore = { lat: 12.97, lng: 77.59 };
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 12,
-    center: bangalore
-  });
 
-  // This event listener calls addMarker() when the map is clicked.
-  google.maps.event.addListener(map, 'click', function(event) {
-    addMarker(event.latLng, map);
-  });
+  var mapOptions = {
+    zoom: 10,
+    center: new google.maps.LatLng(51.817116, 4.780616),
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    panControl: false,
+    mapTypeControl: false,
+    scaleControl: false,
+    streetViewControl: false,
+    overviewMapControl: false,
+    rotateControl: false
+  };
 
-  // Add a marker at the center of the map.
-  addMarker(bangalore, map);
-}
+  var map = new google.maps.Map(document.getElementById('maps'),
+  mapOptions);
 
-// Adds a marker to the map.
-function addMarker(location, map) {
-  // Add the marker at the clicked location, and add the next-available label
-  // from the array of alphabetical characters.
-  var marker = new google.maps.Marker({
-    position: location,
-    label: labels[labelIndex++ % labels.length],
+  var customMarker = new google.maps.Marker({
+    position: new google.maps.LatLng(51.817116, 4.780616),
     map: map
   });
+
+};  // end of initialize
+
+
+function loadScript() {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src = 'https://maps.googleapis.com/maps/api/js?v=3&sensor=false&' +
+    'callback=initialize';
+  document.body.appendChild(script);
 }
 
-google.maps.event.addDomListener(window, 'load', initialize);
+addLoadEvent(loadScript);
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44"></script>
