--- a/findtea.html
+++ b/findtea.html
@@ -84,10 +84,6 @@
   <p id="message" ></p>
 </div>
   
-  
-  
-  
-  
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
  <div id="googleMap" style="width:100%;height:400px;"></div>
@@ -122,9 +118,9 @@ var mapProp= {
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
 </script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44"></script>
   
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=myMap"></script>
+
   
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
