--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">More</h3><br>
+  <h3 class="margin"><a href="more.html">More</a></h3><br>
   
 </div>
 
