--- a/more.html
+++ b/more.html
@@ -66,7 +66,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html"></a>ABOUT</li>
+        <li><a href="about.html">ABOUT</a></li>
         <li><a href="findtea.html">FIND TEA</a></li>
         <li><a href="findfriends.html">FIND FRIENDS</a></li>
       </ul>
