--- a/about.html
+++ b/about.html
@@ -117,13 +117,13 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin"><a href="more.html">More</a></h3><br>
+  <h3 class="margin">More</h3><br>
   
 </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Jonathan likes HK style milktea.</p> 
+  <p><a href="more.html">More</a>Jonathan likes HK style milktea.</p> 
 </footer>
 
 </body>
