--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p><a href="more.html">More</a>Jonathan likes HK style milktea.</p> 
+  <p><a href="more.html">Jonathan likes HK style milktea.</a></p> 
 </footer>
 
 </body>
