--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+  <h3 class="margin">What's boba?</h3>
+  <p>Boba tea (also called pearl tea, or bubble tea) is a sweet drink that combines milk, flavored tea and tapioca pearls. </p>
   </div>
 
 <!-- Third Container (Grid) -->
