--- a/more.html
+++ b/more.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #B858D0; /* rasberry */
+      background-color: #d091e0; /* rasberry */
       color: #ffffff;
   }
   .bg-2 { 
