--- a/findtea.html
+++ b/findtea.html
@@ -91,19 +91,19 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin"><a href="about.html">The Team</a></h3><br>
+  <h3 class="margin"><a href="about.html">Our Tea Picks</a></h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Sammi C</p>
-       <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Honey Milk Tea at ShareTea</p>
+       <img src="https://s3-media1.fl.yelpcdn.com/bphoto/6kKwEb1kokA161ugozwuTw/ls.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Donna L</p>
-      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Liquid Gold at Teaspoon</p>
+      <img src="https://s3-media4.fl.yelpcdn.com/bphoto/ZlUUVCrD0vCochJnmSIIxA/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Jonathan C</p>
-      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Thai Milk Tea at Bambu</p>
+      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
