--- a/findfriends.html
+++ b/findfriends.html
@@ -111,7 +111,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Sammi likes honey milktea.</p> 
+  <p><a href="more.html">Sammi likes honey milktea.</a></p> 
   <script> var names = ["Jonathan C.", "Donna L", "Sammi C.", "Vincent Y", "Kelly L", "Tiffany Yu :)", "Michael C", "Melissa C" 
                         , "Clement Cheuk Wai Ng", "Nicolas H", "Leonard W.", "Klarizza", "Justin F", "Claudia T", "Tommy P"
                         , "Mimi N.", "Bethany W", "Amanda Hall", "Galina I", "Herman P", "Alex F", "Matthew C"];
