--- a/findtea.html
+++ b/findtea.html
@@ -124,7 +124,7 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
   
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Donna likes oolong milktea.</p> 
+  <p><a href="more.html"> Donna likes oolong milktea.</a></p>
 </footer>
 
 </body>
