--- a/more.html
+++ b/more.html
@@ -122,7 +122,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Jonathan likes HK style milktea.</p> 
+  <p>Boba.</p> 
 </footer>
 
 </body>
