--- a/more.html
+++ b/more.html
@@ -76,7 +76,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h1 class="margin">Welcome to the Easter Egg page!</h1>
+ <h1 class="margin">Welcome to the Easter Egg page! -Chris</h1>
     <div class="row">
       <div class="col-sm-4">
       </div>
@@ -88,18 +88,18 @@
     </div>
  <p> </p>
  <p> </p>
- <p> Congratulations! You've found the secret page! Ice Bear is proud of you. </p>
+ <p> Congratulations! You've found the secret page! Ice Bear, no Chris is proud of you. </p>
 </div>
 
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-    <h3 class="margin">The Team</h3><br>
+    <h3 class="margin">Chris' Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
        <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-        <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves. </p>
+        <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves, but Chris does not. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
@@ -116,13 +116,13 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Ice Bear has taken over this section.</h3><br>
+  <h3 class="margin">Ice Bear, no Chris has taken over this section.</h3><br>
   
 </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Boba. Ice bear can cook this. </p> 
+  <p>Boba. Ice bear can cook this Chris doesnt like Sammi. </p> 
 </footer>
 
 </body>
