--- a/more.html
+++ b/more.html
@@ -103,12 +103,12 @@
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
-      <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://vignette1.wikia.nocookie.net/webarebears/images/c/c0/Panda_is_the_cutest_dont_lie_to_me.png/revision/latest?cb=20150626050439" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
-      <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://vignette1.wikia.nocookie.net/webarebears/images/a/a7/Grizzly_is_surprised.png/revision/latest?cb=20150625140941" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Jonathan does not have pink hair. </p>
     </div>
   </div>
