--- a/more.html
+++ b/more.html
@@ -103,7 +103,7 @@
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
-      <img src="http://vignette1.wikia.nocookie.net/webarebears/images/c/c0/Panda_is_the_cutest_dont_lie_to_me.png/revision/latest?cb=20150626050439" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i64.tinypic.com/2iizdk2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows. </p>
     </div>
     <div class="col-sm-4"> 
