--- a/more.html
+++ b/more.html
@@ -78,12 +78,11 @@
 <div class="container-fluid bg-1 text-center">
  <h1 class="margin">Welcome to the Easter Egg page! -Chris</h1>
     <div class="row">
-      <div class="col-sm-4">
-      </div>
       <div class="col-sm-4"> 
         <img src= "https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" style="width:100%" alt="Image">
       </div>
       <div class="col-sm-4">
+         <img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/013/373/337.gif" class="img-responsive margin" style="width:100%" alt="Image">
       </div>
     </div>
  <p> </p>
