--- a/more.html
+++ b/more.html
@@ -117,10 +117,18 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center"> 
-  <div class="col-sm-4">
-    <img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/013/373/337.gif" class="img-responsive margin" style="width:100%" alt="Image">
-      
-    <h3 class="margin">Ice Bear, no Chris has taken over this section.</h3><br>
+  <div class="row">
+    <div class="col-sm-4"> 
+      <p></p>
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+        <h3 class="margin">Ice Bear, no Chris has taken over this section.</h3><br>
+        <img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/013/373/337.gif" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+    </div>
   </div>
 </div>
 
