--- a/more.html
+++ b/more.html
@@ -109,7 +109,7 @@
     </div>
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
-      <img src="http://vignette1.wikia.nocookie.net/webarebears/images/a/a7/Grizzly_is_surprised.png/revision/latest?cb=20150625140941" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://v.cdn.vine.co/r/videos/4BE85DC6BF1241164162244427776_3e0befa2789.4.5.1549606826501848125.mp4.jpg?versionId=sHBZxVUcLDdJYujWthFoMoOBB.ma3zFo" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Jonathan does not have pink hair. </p>
     </div>
   </div>
