--- a/more.html
+++ b/more.html
@@ -104,7 +104,7 @@
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
-      <img src="http://i64.tinypic.com/2iizdk2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i63.tinypic.com/9kmt6w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows. </p>
     </div>
     <div class="col-sm-4"> 
