--- a/about.html
+++ b/about.html
@@ -110,14 +110,14 @@
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Jonathan does not have pink hair.</p>
+      <p>Jonathan does not have pink hair. It's yellow now. </p>
     </div>
   </div>
   </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">More</h3><br>
+  <h3 class="margin"></h3><br>
   
 </div>
 
