--- a/findfriends.html
+++ b/findfriends.html
@@ -82,7 +82,9 @@
   <table border=3>
   <tr>
     <td>
-      <input onclick="displayImage();" type=button value="Display Random Image">
+      <input onclick="displayImage();" class="btn btn-default btn-lg">
+    <span class = "glyphicon glyphicon-search"></span> Find Friends
+             <!--type=button value="Display Random Image">
     </td>
   </tr>
   <tr>
