--- a/findfriends.html
+++ b/findfriends.html
@@ -82,9 +82,8 @@
   <table border=3>
   <tr>
     <td>
-      <input onclick="displayImage();" class="btn btn-default btn-lg">
-    <span class = "glyphicon glyphicon-search"></span> Find Friends
-             <!--type=button value="Display Random Image">
+      <input onclick="displayImage();" type="btn btn-default btn-lg" value="Find Friendsasdf">
+          <span class = "glyphicon glyphicon-search"></span> Find Friends
     </td>
   </tr>
   <tr>
