--- a/findfriends.html
+++ b/findfriends.html
@@ -82,8 +82,7 @@
   <table border=3>
   <tr>
     <td>
-      <input onclick="displayImage();" type="btn btn-default btn-lg" value="Find Friendsasdf">
-          <span class = "glyphicon glyphicon-search"></span> Find Friends
+      <input onclick="displayImage();" type=button value="hello">
     </td>
   </tr>
   <tr>
