--- a/findfriends.html
+++ b/findfriends.html
@@ -128,7 +128,7 @@
 	<img id="img">
  	<span id="text2"></span>	
     </p>
-      <button class="button" name = "button5" type="button" onclick="changeText()"> click</button>
+      <button class="button" name = "button5" type="button" onclick="changeText()"> Find Friends</button>
     </div>
   </div>
 </form>
